force-app/main/default/objects/Asset_Intake_Applicants__c/Asset_Intake_Applicants__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Applicants</label>
    <nameField>
        <displayFormat>AIAN-{00000000}</displayFormat>
        <label>Asset Intake Applicant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>