force-app/main/default/objects/Asset_Intake_Applicants__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipLabel>Asset Intake Applicants</relationshipLabel>
    <relationshipName>Asset_Intake_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>