force-app/main/default/objects/Asset_Intake_Applicants__c/fields/Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Address__c</fullName>
    <label>Applicant Address</label>
    <type>Address</type>
</CustomField>