force-app/main/default/objects/Asset_Intake_Applicants__c/fields/Asset_Intake_Form__c.field-meta.xml
<CustomField>
    <fullName>Asset_Intake_Form__c</fullName>
    <label>Asset Intake Form</label>
    <referenceTo>Asset_Intake_Form__c</referenceTo>
    <relationshipLabel>Asset Intake Applicants</relationshipLabel>
    <relationshipName>Asset_Intake_Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>