force-app/main/default/objects/Asset_Intake_Applicants__c/fields/Client_Classification__c.field-meta.xml
<CustomField>
    <fullName>Client_Classification__c</fullName>
    <label>Client Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
                <default>true</default>
                <label>Applicant</label>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Assignor</fullName>
            </value>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Licensor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>