force-app/main/default/objects/Asset_Intake_Applicants__c/fields/Client_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Number__c</fullName>
    <label>Client Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>