force-app/main/default/objects/Asset_Intake_Applicants__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>SymphonyLF__Currency__c</referenceTo>
    <relationshipLabel>Asset Intake Applicants</relationshipLabel>
    <relationshipName>Asset_Intake_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>