force-app/main/default/objects/Asset_Intake_Applicants__c/fields/US_CA_Entity_Size__c.field-meta.xml
<CustomField>
    <fullName>US_CA_Entity_Size__c</fullName>
    <label>US/CA Entity Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>